src/styles/global.css
/*
  The CSS in this style tag is based off of Bear Blog's default CSS.
  https://github.com/HermanMartinus/bearblog/blob/297026a877bc2ab2b3bdfbd6b9f7961c350917dd/templates/styles/blog/default.css
  License MIT: https://github.com/HermanMartinus/bearblog/blob/master/LICENSE.md
 */

:root {
	--accent: #bc584e;
	--accent-dark: #7e7e7e;
	/* --accent-dark: rgb(189, 156, 156); */
	--black: #0f1219;
	--gray: #60739f;
	--gray-light: #7d8086;
	--gray-dark: #222939;
	--background: #fff8f3;
	--box-shadow: 0 2px 6px rgba(var(--gray), 25%), 0 8px 24px rgba(var(--gray), 33%),
		0 16px 32px rgba(var(--gray), 33%);
}
@font-face {
	font-family: 'Atkinson';
	src: url('/fonts/atkinson-regular.woff') format('woff');
	font-weight: 400;
	font-style: normal;
	font-display: swap;
}
@font-face {
	font-family: 'Atkinson';
	src: url('/fonts/atkinson-bold.woff') format('woff');
	font-weight: 700;
	font-style: normal;
	font-display: swap;
}
body {
	/* font-family: 'Atkinson', sans-serif; */
	font-family: 'IBM Plex Serif', serif;
	margin: 0;
	padding: 0;
	text-align: left;
	background: var(--background);
	background-size: 100% 600px;
	word-wrap: break-word;
	overflow-wrap: break-word;
	color: var(--gray-dark);
	font-size: 20px;
	line-height: 1.7;
}
.container {
	max-width: 800px;
	margin: 0 auto;
}
main {
	width: 100%;
	height: 100%;
	margin: auto;
	padding: 1em;
}
h1,
h2,
h3,
h4,
h5,
h6 {
	margin: 0 0 0.5rem 0;
	color: var(--black);
	line-height: 1.2;
}
h1 {
	font-size: 2.2em;
}
h2 {
	font-size: 1.8em;
}
h3 {
	font-size: 1.5em;
	font-style: italic;
	font-weight: normal;
}
h4 {
	font-size: 1.25em;
	font-weight: normal;
}
h5 {
	font-size: 1.1em;
	font-weight: normal;
}
strong,
b {
	font-weight: 700;
}
a {
	color: var(--gray-dark);
}
a:hover {
	color: var(--accent);
}
p {
	margin-bottom: 1em;
}
.prose p {
	margin-bottom: 2em;
}
textarea {
	width: 100%;
	font-size: 16px;
}
input {
	font-size: 16px;
}
table {
	width: 100%;
}
img {
	max-width: 100%;
	height: auto;
	border-radius: 8px;
}
.prose :where(h2, h3, h4) {
	scroll-margin-top: 96px;
}
code {
	padding: 2px 5px;
	background-color: var(--gray-light);
	border-radius: 2px;
}
pre {
	padding: 1.5em;
	border-radius: 8px;
}
pre > code {
	all: unset;
}
blockquote {
	border-left: 4px solid var(--accent);
	padding: 0 0 0 20px;
	margin: 0px;
	font-size: 1.333em;
}
hr {
	border: none;
	border-top: 1px solid var(--gray-light);
}
@media (max-width: 720px) {
	body {
		font-size: 18px;
	}
	main {
		padding: 1em;
	}
}

.sr-only {
	border: 0;
	padding: 0;
	margin: 0;
	position: absolute !important;
	height: 1px;
	width: 1px;
	overflow: hidden;
	/* IE6, IE7 - a 0 height clip, off to the bottom right of the visible 1px box */
	clip: rect(1px 1px 1px 1px);
	/* maybe deprecated but we need to support legacy browsers */
	clip: rect(1px, 1px, 1px, 1px);
	/* modern browsers, clip-path works inwards from each corner */
	clip-path: inset(50%);
	/* added line to stop words getting smushed together (as they go onto seperate lines and some screen readers do not understand line feeds as a space */
	white-space: nowrap;
}

